--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,30 +1,25 @@
 flutter_native_splash:
-  # Background colors
-  color: "#ffffff"          # Light mode background
-  color_dark: "#573C12"     # Dark mode background
+  # ✅ Background image for Android < 12
+  background_image: assets/images/splash_screen-bg.jpg
+  background_image_dark: assets/images/splash_screen-bg.jpg
 
-  # Splash icons for older Android & iOS
-  image: assets/images/logoLight.png
-  image_dark: assets/images/logoDark.png
+  # ✅ Center icon on top of background
+  image: assets/images/new_Logo.png
+  image_dark: assets/images/new_Logo.png
 
   android: true
   ios: true
   web: false
 
-  # Content alignment
+  # ✅ Make sure content is centered
   android_gravity: center
   ios_content_mode: center
 
-  # ✅ Android 12 specific settings
+  # ✅ Android 12+ settings (color background only)
   android_12:
-    # Backgrounds
-    color: "#ffffff"
-    color_dark: "#573C12"
+    color: "#EFE5D5"         # light mode color
+    color_dark: "#A57E4C"    # dark mode color
 
-    # Icons
-    image: assets/images/logoLight.png
-    image_dark: assets/images/logoDark.png
+    image: assets/images/new_Logo.png
+    image_dark: assets/images/new_Logo.png
 
-    # Icon background (optional, if your icon is not full-bleed)
-    icon_background_color: "#ffffff"
-    icon_background_color_dark: "#573C12"
