--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  google_maps_flutter: ^2.13.1
+
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  equatable: ^2.0.7
+  image_picker: ^1.2.0
+  flutter_bloc: ^9.1.1
+  dotted_border: ^3.0.1
+  cloud_firestore: ^6.0.3
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.6
   flutter_localization: ^0.3.3
@@ -41,6 +50,8 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   flutter_localizations:
         sdk: flutter
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
 
 dev_dependencies:
   flutter_test:
