--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  sentry_flutter: ^9.8.0
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   google_maps_flutter: ^2.13.1
-
+  skeletonizer: ^2.1.0+1
   geolocator: ^14.0.2
   geocoding: ^4.0.0
   equatable: ^2.0.7
@@ -43,6 +44,7 @@ dependencies:
   dotted_border: ^3.0.1
   cloud_firestore: ^6.0.3
   cupertino_icons: ^1.0.8
+  flutter_dotenv: ^5.1.0
   flutter_native_splash: ^2.4.6
   flutter_localization: ^0.3.3
   provider: ^6.0.5
@@ -52,7 +54,11 @@ dependencies:
         sdk: flutter
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
-
+  http: ^1.2.0
+  sentry_dart_plugin: ^3.2.0
+  cached_network_image: ^3.4.1
+  firebase_messaging: ^16.0.4
+  fl_chart: ^1.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,6 +69,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  intl_utils: ^2.8.5
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -81,6 +89,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
+    - .env
 
   fonts:
     - family: Poppins
@@ -91,6 +100,17 @@ flutter:
           weight: 600
         - asset: assets/fonts/Poppins-Regular.ttf
           weight: 400
+
+    - family: Tajawal
+      fonts:
+        - asset: assets/fonts/ar/Tajawal-Bold.ttf
+          weight: 900
+        - asset: assets/fonts/ar/Tajawal-Medium.ttf
+          weight: 600
+        - asset: assets/fonts/ar/Tajawal-Regular.ttf
+          weight: 400
+
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
@@ -118,3 +138,8 @@ flutter:
   # see https://flutter.dev/to/font-from-package
 flutter_intl:
   enabled: true
+sentry:
+  upload_debug_symbols: true
+  upload_source_maps: true
+  project: flutter
+  org: synvo
